# deskgpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
deskgpt/: __init__.py  main.py
deskgpt/config/: config.py
deskgpt/core/: browser_controller.py  command_parser.py  llm_client.py  logger.py
deskgpt/types/: commands.py
